--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>CodeRant</title>
+  <title>jsRant</title>
   <base href="/">
 
   {{#unless environment.production}}
