--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
   <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
   {{/unless}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="favicon16.png" sizes="16x16">
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
