Update styles reference

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>jsRant</title>
-  <base href="/">
+  <base href="/js-rant/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="favicon16.png" sizes="16x16">
-  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
   <app-root>Loading...</app-root>
